# paper-collector

./: .gitignore  README.md  collect_paper.py  pyproject.toml
config/: claude_desktop_config.json
src/paper_collector/: __init__.py  __main__.py  app.py  cli.py
src/paper_collector/api/: __init__.py  arxiv_client.py  semantic_scholar_client.py
src/paper_collector/db/: __init__.py  database.py
src/paper_collector/pdf/: __init__.py  pdf_handler.py
src/paper_collector/tools/: __init__.py  mcp_tools.py
src/paper_collector/utils/: __init__.py  config.py  file_utils.py
tests/: test_api_clients.py  test_database.py  test_pdf_handler.py
